# sycl-project-template

./: CMakeLists.txt  README.md
